@@ -2431,6 +2431,7 @@ $1',
 'version-hook-name'                => '鈎名',
 'version-hook-subscribedby'        => '用於',
 'version-version'                  => '版',
+'version-revision'                 => '訂',
 'version-license'                  => '牌',
 'version-software'                 => '裝件',
 'version-software-product'         => '品',
